change array handling with loop

--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -41,3 +41,11 @@
   vars:
     zone_id: "{{ zone_item.json.result[0].id }}"
     zone_name: "{{ zone_item.item }}"
+  register: dns_zone_results
+
+- name: Combine all zone records into dns_zones_all_remote
+  set_fact:
+    dns_zones_all_remote: >-
+      {{ dns_zone_results.results 
+         | map(attribute='ansible_facts.dns_zones_single') 
+         | list }}
