change array handling with loop

--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -45,7 +45,4 @@
 
 - name: Combine all zone records into dns_zones_all_remote
   set_fact:
-    dns_zones_all_remote: >-
-      {{ dns_zone_results.results 
-         | map(attribute='ansible_facts.dns_zones_single') 
-         | list }}
+    dns_zones_all_remote: "{{ dns_zone_results.results | map(attribute='dns_zone_single') | list }}"
