change array handling with loop

--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_single_zone.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_single_zone.yml
@@ -24,3 +24,7 @@
     dns_zone_single:
       zone: "{{ zone_name }}"
       dns_entries: "{{ dns_entries }}"
+
+- name: Debug single zone
+  debug:
+    var: dns_zone_single
