--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,7 +24,7 @@
 
 - name: set new dns file content
   set_fact:
-    all_dns_zones: dns_zones_all_remote
+    all_dns_zones: "{{ dns_zones_all_remote }}"
 
 - name: Generate DNS block and update inventory
   include_tasks: "{{ role_path }}/tasks/generate_block.yml"
