append all results from loop

--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -41,5 +41,5 @@
   vars:
     zone_id: "{{ zone_item.json.result[0].id }}"
     zone_name: "{{ zone_item.item }}"
-    dns_zones_all_remote: { dns_zones_all_remote }
+    dns_zones_all_remote: { [dns_zones_all_remote] }
   register: dns_zone_results
