append all results from loop

--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_single_zone.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_single_zone.yml
@@ -21,4 +21,8 @@
 
 - name: debug
   set_fact:
-    dns_zones_all_remote: "{{ dns_zones_all_remote + [ {'zone': zone_name, 'dns_entries': dns_entries} ] }}"
+    dns_zone_single: "{{ [ {'zone': zone_name, 'dns_entries': dns_entries} ] }}"
+
+- name: Append this zone to global dns_zones_all_remote
+  set_fact:
+    dns_zones_all_remote: "{{ dns_zones_all_remote + [dns_zone_single] }}"
