--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -48,3 +48,13 @@
     zone_name: "{{ zone_item.item }}"
     #dns_zones_all_remote: "{{ dns_zone_single }}"
   register: dns_zone_results
+
+  - name: Gather temporary zone files
+    find:
+      paths: {{ dns_zones_file | dirname }}
+      patterns: "*.json"
+    register: tmp_zone_files
+
+- name: Combine all zone JSON files into one list
+  set_fact:
+    dns_zones_all_remote: "{{ tmp_zone_files.files | map(attribute='path') | map('file', read_json) | list }}"
