--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -49,6 +49,12 @@
     #dns_zones_all_remote: "{{ dns_zone_single }}"
   register: dns_zone_results
 
+- name: Gather temporary zone files
+  find:
+    paths: "{{ dns_zones_file | dirname }}"
+    patterns: "*.json"
+  register: tmp_zone_files
+
 - name: Read each temporary zone JSON file and append
   ansible.builtin.read_json:
     path: "{{ item.path }}"
