--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -58,7 +58,7 @@
 - name: Read each temporary zone JSON file
   set_fact:
     zone_json: "{{ lookup('file', item.path) | from_json }}"
-  loop: "{{ temp_zone_files.files }}"
+  loop: "{{ tmp_zone_files.files }}"
   register: zone_json_results
 
 - name: Combine all zones into one list
