--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -57,13 +57,18 @@
 
 - name: Read each temporary zone JSON file
   set_fact:
-    zone_json: "{{ lookup('file', item.path) | from_json }}"
+    dns_zones_all_remote: "{{ dns_zones_all_remote + (lookup('file', item.path) | from_json) }}"
   loop: "{{ tmp_zone_files.files }}"
-  register: zone_json_results
 
-- name: Combine all zones into one list
-  set_fact:
-    dns_zones_all_remote: "{{ dns_zones_all_remote + item }}"
-  loop: "{{ zone_json_results.results }}"
-  loop_control:
-    loop_var: item
+#- name: Read each temporary zone JSON file
+#  set_fact:
+#    zone_json: "{{ lookup('file', item.path) | from_json }}"
+#  loop: "{{ tmp_zone_files.files }}"
+#  register: zone_json_results
+#
+#- name: Combine all zones into one list
+#  set_fact:
+#    dns_zones_all_remote: "{{ dns_zones_all_remote + item }}"
+#  loop: "{{ zone_json_results.results }}"
+#  loop_control:
+#    loop_var: item
